# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  Engine.sln
Dependecies/assimp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  Assimp.sln  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  UpdateAssimpLibsDebugSymbolsAndDLLs.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  revision.h  uninstall.vcxproj  uninstall.vcxproj.filters
Dependecies/assimp/code/: INSTALL.vcxproj  INSTALL.vcxproj.filters  assimp.vcxproj  assimp.vcxproj.filters  cmake_install.cmake
Dependecies/assimp/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
Dependecies/assimp/test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit.vcxproj  unit.vcxproj.filters
Dependecies/assimp/test/headercheck/: INSTALL.vcxproj  (+2 more)
Dependecies/glad/src/: glad.c
Engine/: Engine.vcxproj  Engine.vcxproj.filters
Engine/RemCode/: VertexImpl.txt
Engine/include/: Camera.h  EngineUtils.h  Entity.h  Launch.h  LightSource.h  Mesh.h  Model.h  Renderer.h  image.cpp  image.h  shader.h
Engine/src/: Application.cpp  Camera.cpp  EngineUtils.cpp  Entity.cpp  Launch.cpp  LightSource.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  imageLoader.cpp  shader.cpp
Engine/src/Shaders/: LightSourceFrag.glsl  LightSourceVert.glsl  ObjectFrag.glsl  ObjectVert.glsl  frag.glsl  frag2.glsl  vertex.glsl  vertex2.glsl
